Partially fixed searchbar text misalignment

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -7,6 +7,7 @@
 @use "base/header.scss";
 @use "base/footer.scss";
 @use "base/MenuBar.scss";
+@use "base/SearchBar.scss";
 //Auth
 @use "auth/login.scss";
 @use "auth/register.scss";
