--- a/web/src/styles/sass/base/SearchBar.scss
+++ b/web/src/styles/sass/base/SearchBar.scss
@@ -323,7 +323,6 @@ $primary-domits-color: #0d9813;
     color: $primary-domits-color;
     font-size: 1rem;
     font-weight: 500;
-    margin-top: 0.1rem;
   }
 
   .Search-guestP {
@@ -331,7 +330,6 @@ $primary-domits-color: #0d9813;
     font-weight: 500;
     color: #000;
     font-size: 0.75rem;
-    margin-top: 1rem;
   }
 
   @include mobile {
@@ -440,9 +438,9 @@ $primary-domits-color: #0d9813;
     width: 85%;
   }
 
-  @media (max-width: 1000px) {
-    width: 100%;
-  }
+  // @media (max-width: 1000px) {
+  //   width: 100%;
+  // }
 
   @media (min-width: 2500px) {
     .responsive-calendar {
