Minor fix to margins in app.scss

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -65,8 +65,11 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    margin-top: 80px;
-    // margin: auto;
+    margin: auto;
+  }
+
+  html {
+    margin-top: 90px;
   }
   
   code {
