Header positioning improvements, and warning removal in the front-end.

--- a/web/src/features/hostaiagent/hostchatbot.css
+++ b/web/src/features/hostaiagent/hostchatbot.css
@@ -1,6 +1,10 @@
 @import  "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+.warning-content {
+  display: none;
+}
+
 .hostchatbot-toggle-button {
   position: fixed;
   bottom: 20px;
