--- a/web/src/styles/sass/base/header.scss
+++ b/web/src/styles/sass/base/header.scss
@@ -20,8 +20,7 @@ $breakpoint-sm: 480px;
   background: white;
   box-shadow: 0 2px 6px 0 $box-shadow-color;
   text-align: center;
-  height: 100%;
-  max-height: 100px;
+  height: auto;
 
   .header-nav {
     display: flex;
