--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -5,9 +5,12 @@
   border-radius: 1.875rem;
   border: solid 1px #7171716a;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   height: 3.43rem;
   box-sizing: border-box;
   background-color: white;
+  padding: 0 1rem;
 }
 
 .css-h3fyes-control {
@@ -37,11 +40,10 @@
 .searchTitle {
   color: var(--primary-color);
   font-size: 1rem;
-  font-family: 'Kanit', sans-serif;
+  font-family: "Kanit", sans-serif;
   font-weight: 500;
   text-overflow: ellipsis;
   transform: translateY(-15%);
-
 }
 
 .Search-check-in {
@@ -61,35 +63,45 @@
   height: 3.5rem;
 }
 
-.Search-bar>div {
+.Search-bar > div {
   position: relative;
-  transition: background 150ms ease, width 150ms ease;
+  transition:
+    background 150ms ease,
+    width 150ms ease;
+  flex: 1;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: normal;
 }
 
-.Search-bar>div::before {
+.Search-bar > div::before {
   position: absolute;
   content: "";
   left: -1.85%;
   top: 50%;
-  transform: translateY(-40%);
+  transform: translateY(-50%);
   width: 0.05rem;
-  height: 60%;
+  height: 80%;
   background: rgb(88, 153, 22);
 }
 
-.Search-bar>div:nth-of-type(1)::before {
+.Search-bar > div:nth-of-type(1)::before {
   background: transparent;
 }
 
-.Search-bar>div:nth-of-type(3)::before {
-  transform: translateY(-40%);
-  left: -0.01%;
-}
-
-.Search-bar>div:nth-of-type(4)::before {
-  background: solid;
-  height: 56%;
-  transform: translateY(-40%);
+.Search-bar > div:nth-of-type(3)::before,
+.Search-bar > div:nth-of-type(4)::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 60%;
+  background: rgb(88, 153, 22);
+  z-index: 1;
 }
 
 .DatePicker__calendarContainer {
@@ -112,16 +124,17 @@
   border-radius: 50%;
   color: #ffffff;
   background-color: var(--primary-color);
-  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+  box-shadow:
+    rgba(27, 31, 35, 0.04) 0px 1px 0px 0px,
+    rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
   height: 2.5rem;
   width: 2.5rem;
-  margin-top: 0.45rem;
-  margin-left: 0.4rem;
+  margin-left: auto;
 }
 
 .searchbar-button:hover {
   opacity: 90%;
-  transition-duration: 0.0s
+  transition-duration: 0s;
 }
 
 .searchbar-button svg {
@@ -138,11 +151,9 @@
 .searchBar_inputfield {
   background: none;
   border: none;
-  text-align: left;
-  transform: translateY(10%);
-  width: 90%;
+  text-align: center;
   height: 2rem;
-  margin-left: 1rem;
+  margin: 0 auto;
 }
 
 .searchBar_inputfield[type="search"]::-webkit-search-cancel-button {
@@ -150,7 +161,6 @@
   color: black;
   font-size: large;
   filter: grayscale(100%);
-
 }
 
 .searchBar_inputfield:focus {
@@ -159,10 +169,9 @@
 
 .searchBar_inputfield::placeholder {
   color: var(--primary-color);
-  font-family: 'Kanit', sans-serif;
+  font-family: "Kanit", sans-serif;
   font-weight: 500;
   font-size: 1rem;
-  margin: auto;
 }
 
 .Search-button-section {
@@ -219,7 +228,7 @@
 @keyframes dropdownFadeIn {
   0% {
     opacity: 0;
-    transform: translateX(-50%) scale(0.80);
+    transform: translateX(-50%) scale(0.8);
   }
 
   100% {
@@ -240,7 +249,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 0.40rem;
+  margin-top: 0.4rem;
   border-bottom: 1px solid var(--primary-color);
 }
 
@@ -294,7 +303,6 @@
   border-color: var(--primary-color);
 }
 
-/* test */
 .Search-guestCounter .Search-controls button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
@@ -310,6 +318,7 @@
   font-size: 1rem;
   font-weight: 500;
   padding-top: 0.3rem;
+  padding-left: 1rem;
 }
 
 .Search-guestP {
@@ -373,7 +382,6 @@
 }
 
 @media (max-width: 1500px) {
-
   .Calendar__monthSelectorItemText,
   .Calendar__yearSelectorText {
     font-size: 8px !important;
@@ -381,7 +389,6 @@
 }
 
 @media (max-width: 1200px) {
-
   .Calendar__monthSelectorItemText,
   .Calendar__yearSelectorText {
     font-size: 7px !important;
@@ -389,7 +396,6 @@
 }
 
 @media (max-width: 768px) {
-
   .Calendar__monthSelectorItemText,
   .Calendar__yearSelectorText {
     font-size: 1rem !important;
@@ -397,14 +403,12 @@
 }
 
 @media (min-width: 2500px) {
-
   .Calendar__monthSelectorItemText,
   .Calendar__yearSelectorText {
     font-size: 12px !important;
   }
 }
 
-/* dit is de styling voor de calendar gedeelte */
 .DatePicker {
   position: relative;
   display: inline-block;
@@ -439,7 +443,7 @@
   color: transparent;
 }
 
-.Calendar__monthYear>* {
+.Calendar__monthYear > * {
   font-size: 1.4em;
   color: black;
 }
@@ -462,12 +466,13 @@
   overflow: hidden;
 }
 
-.Calendar__day.-weekend:not(.-selected):not(.-blank):not(.-selectedStart):not(.-selectedEnd):not(.-selectedBetween) {
+.Calendar__day.-weekend:not(.-selected):not(.-blank):not(.-selectedStart):not(
+    .-selectedEnd
+  ):not(.-selectedBetween) {
   color: inherit;
 }
 
 @media (max-width: 768px) {
-
   .input-calendar,
   .DatePicker__input {
     font-size: 0.5rem;
@@ -494,7 +499,6 @@
 }
 
 @media (max-width: 768px) {
-
   .Search-button-section,
   .searchInputContainer,
   .Search-check-in {
@@ -529,9 +533,8 @@
     margin: auto;
   }
 
-  /* kan problemen veroorzaken bij mobile-view */
   .searchBar_inputfield::placeholder {
-    transform: translateX(2.5%)
+    transform: translateX(2.5%);
   }
 
   .searchBar_inputfield * {
@@ -570,7 +573,6 @@
     height: 3.5rem;
   }
 
-  /* tijdelijke oplossing het is nog niet responsive */
   .DatePicker__input {
     border: solid transparent;
     transform: translateX(-0%) translateY(-130%);
@@ -587,7 +589,7 @@
     margin-top: 0.5rem;
   }
 
-  .Search-bar>div::before {
+  .Search-bar > div::before {
     background: transparent;
   }
 
@@ -661,7 +663,6 @@
     text-overflow: ellipsis;
   }
 
-
   .Search-bar {
     display: none;
   }
@@ -711,4 +712,14 @@
   .DatePicker__input {
     padding-left: 0%;
   }
+}
+
+.Search-bar .Search-location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  transform: translateY(0);
 }
