--- a/web/src/styles/sass/auth/register.scss
+++ b/web/src/styles/sass/auth/register.scss
@@ -1,53 +1,31 @@
 // Variables
-$primary-color: #003366;
-$secondary-color: var(--domits-host-blue);
-$hover-secondary: #4a86c3;
-$error-color: red;
-$error-border-color: red;
-$font-family: 'Kanit', sans-serif;
-$font-size-large: 30px;
-$font-size-medium: 18px;
-$font-size-small: 14px;
+$host-blue: var(--secondary-color);
+$hover-blue: #4a86c3;
+$text-color: black;
+$font-main: 'Kanit', sans-serif;
+$input-padding: 8px 15px;
 $border-radius: 5px;
+$button-font-size: 18px;
+$title-font-size: 30px;
+$small-font-size: 14px;
+$shake-color: red;
 
-// Register Button
-.registerButton {
-  width: 100%;
-  padding: 8px 15px;
-  margin-top: 15px;
-  background: $secondary-color;
-  box-shadow: none;
-  border-radius: $border-radius;
-  border: none;
-  color: white;
-  font-size: $font-size-medium;
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-
-  &:hover {
-    background: $hover-secondary;
-  }
-}
-
-// Register Title
-.registerTitle {
-  color: black;
-  font-size: $font-size-large;
-  font-family: $font-family;
-  font-weight: 400;
-  line-height: 54px;
-  word-wrap: break-word;
-  margin-top: 30px;
-}
-
-// Register Container
+// Nesting Styles
 .registerContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .registerTitle {
+    color: $text-color;
+    font-size: $title-font-size;
+    font-family: $font-main;
+    font-weight: 400;
+    line-height: 54px;
+    word-wrap: break-word;
+    margin-top: 30px;
+  }
 
   .registerForm {
     margin-top: 20px;
@@ -58,27 +36,124 @@ $border-radius: 5px;
     box-sizing: border-box;
 
     label {
-      font-size: $font-size-medium;
+      font-size: $button-font-size;
     }
 
     .registerInput {
-      width: 100%;
+      width: 98.5%;
       height: auto;
-      padding: 8px 15px;
-      margin-top: 5px;
-      margin-bottom: 12px;
+      // padding: $input-padding;
+      line-height: 25px;
+      margin: 5px 0 12px;
       background: white;
       box-shadow: none;
       border-radius: $border-radius;
       border: 1px solid #999;
+      display: inline-flex;
       justify-content: flex-start;
       align-items: center;
-      display: inline-flex;
+    }
+
+    .registerButton {
+      width: 100%;
+      padding: $input-padding;
+      margin-top: 15px;
+      background: $host-blue;
+      box-shadow: none;
+      border-radius: $border-radius;
+      border: none;
+      color: white;
+      font-size: $button-font-size;
+      display: block;
+      text-align: center;
+      text-decoration: none;
+      cursor: pointer;
+
+      &:hover {
+        background: $hover-blue;
+      }
+    }
+
+    .alreadyAccountText {
+      color: $text-color;
+      margin-top: 10px;
+      font-size: $small-font-size;
+      font-family: $font-main;
+      font-weight: 400;
+      line-height: 18px;
+      word-wrap: break-word;
+      align-self: flex-start;
+    }
+
+    .errorText {
+      color: white;
+      font-size: 16px;
+      margin-top: 5px;
+    }
+
+    .inputError {
+      animation: shake 0.3s linear;
+      border-color: $shake-color;
+    }
+
+    .inputShake {
+      animation: shake 0.5s;
+    }
+
+    .requirements {
+      margin-top: 5px;
+
+      label {
+        display: flex;
+        align-items: center;
+        margin: 3px 0;
+        font-size: 10px;
+      }
+    }
+
+    .strength-container {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: $border-radius;
+      background-color: #f9f9f9;
+
+      #strength-bar {
+        height: 10px;
+        border-radius: $border-radius;
+        transition: width 0.3s ease;
+      }
+
+      .strength-text {
+        margin-top: 5px;
+        font-size: 10px;
+        color: #333;
+      }
+
+      .bad {
+        width: 10%;
+        background-color: red;
+      }
+
+      .weak {
+        width: 33%;
+        background-color: red;
+      }
+
+      .medium {
+        width: 66%;
+        background-color: orange;
+      }
+
+      .strong {
+        width: 100%;
+        background-color: green;
+      }
     }
   }
 }
 
-// React Tel Input
 .react-tel-input {
   .form-control {
     width: 100% !important;
@@ -87,9 +162,9 @@ $border-radius: 5px;
     box-shadow: none !important;
     border-radius: $border-radius !important;
     border: 1px solid #999 !important;
+    display: inline-flex !important;
     justify-content: flex-start !important;
     align-items: center !important;
-    display: inline-flex !important;
     box-sizing: border-box;
   }
 
@@ -102,134 +177,39 @@ $border-radius: 5px;
   }
 }
 
-// Already Account Text
-.alreadyAccountText {
-  color: black;
-  margin-top: 10px;
-  font-size: $font-size-small;
-  font-family: $font-family;
-  font-weight: 400;
-  line-height: 18px;
-  word-wrap: break-word;
-  align-self: flex-start;
-}
-
-// Input Error
-.inputError {
-  animation: shake 0.3s linear;
-  border-color: $error-border-color;
-}
-
-.inputShake {
-  animation: shake 0.5s;
-}
-
-@keyframes shake {
-  0% {
-    margin-left: 0px;
-  }
-
-  25% {
-    margin-left: 5px;
-  }
-
-  75% {
-    margin-left: -5px;
-  }
-
-  100% {
-    margin-left: 0px;
-  }
-}
-
-// Error Text
-.errorText {
-  color: rgb(255, 255, 255);
-  font-size: $font-size-medium;
-  margin-top: 5px;
-}
-
-// Sign Out Button
-.signOutButton {
-  background-color: $primary-color;
-  color: #fff;
-  height: 45px;
-  width: 150px;
-  border-radius: $border-radius;
-  box-shadow: none;
-  padding: 10px;
-  margin: 0 10px;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-
-  &:hover {
-    background-color: #335e89;
-    cursor: pointer;
-    transition: background-color 0.3s ease-out;
-  }
-}
-
-// Sign Out Div
 .signOutDiv {
   display: flex;
   width: 100%;
   justify-content: center;
-  padding-bottom: 4%;
-  padding-top: 4%;
-}
+  padding: 4% 0;
 
-// Strength Container
-.strength-container {
-  display: none;
-  margin-top: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: $border-radius;
-  background-color: #f9f9f9;
-
-  #strength-bar {
-    height: 10px;
+  .signOutButton {
+    background-color: #003366;
+    color: #fff;
+    height: 45px;
+    width: 150px;
     border-radius: $border-radius;
-    transition: width 0.3s ease;
-  }
+    box-shadow: none;
+    padding: 10px;
+    margin: 0 10px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
 
-  .strength-text {
-    margin-top: 5px;
-    font-size: 10px;
-    color: #333;
-  }
-
-  .requirements {
-    margin-top: 5px;
-
-    label {
-      display: flex;
-      align-items: center;
-      margin: 3px 0;
-      font-size: 10px;
+    &:hover {
+      background-color: #335e89;
+      cursor: pointer;
+      transition: background-color 0.3s ease-out;
     }
   }
+}
 
-  .bad {
-    width: 10%;
-    background-color: red;
-  }
-
-  .weak {
-    width: 33%;
-    background-color: red;
-  }
-
-  .medium {
-    width: 66%;
-    background-color: orange;
-  }
-
-  .strong {
-    width: 100%;
-    background-color: green;
-  }
+// Keyframes
+@keyframes shake {
+  0% { margin-left: 0px; }
+  25% { margin-left: 5px; }
+  75% { margin-left: -5px; }
+  100% { margin-left: 0px; }
 }
