Made white lines for more space between countries/pictures

--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -173,7 +173,7 @@ body.hide-header .app-header {
 .Places-text {
   color: rgb(0, 0, 0);
   margin-left: 60px;
-  margin-bottom: 20px;
+  margin-top: 80px;
 }
 
 
