--- a/web/src/styles/sass/base/footer.scss
+++ b/web/src/styles/sass/base/footer.scss
@@ -102,10 +102,10 @@ $breakpoint-sm: 480px;
   padding: 15px;
 
   .footer-copyright-text {
-    color: $secondary-color;
-    font-size: 10px;
-    font-weight: 300;
-    line-height: 150%;
+    color: white;
+    font-size: 17.5px;
+    font-weight: 400;
+    line-height: 110%;
   }
 }
 
