--- a/web/src/pages/travelinnovationlab/ninedots.css
+++ b/web/src/pages/travelinnovationlab/ninedots.css
@@ -30,9 +30,10 @@
 .header-two {
     display: flex;
     align-items: center;
-    width: 100%;
+    justify-content: center;
     padding: 0 10vw;
     gap: 15%;
+    
 }
 
 .header-text {
