--- a/web/src/features/guestdashboard/guestdashboard.css
+++ b/web/src/features/guestdashboard/guestdashboard.css
@@ -1,11 +1,11 @@
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     width: 90%;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
-}
+} */
 
 .dashboards {
     display: grid;
