--- a/web/src/features/hostdashboard/HostHomepage.css
+++ b/web/src/features/hostdashboard/HostHomepage.css
@@ -47,7 +47,7 @@
   width: 3.2vw;
 }
 
-.container {
+/* .container {
   width: 90%;
   height: 100%;
   margin: auto;
@@ -56,7 +56,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-}
+} */
 
 .wijzer {
   display: flex;
