Removed unused .container and renamed said container

--- a/web/src/styles/sass/guestdashboard/guestDashboard.scss
+++ b/web/src/styles/sass/guestdashboard/guestDashboard.scss
@@ -6,12 +6,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 $radius: 15px;
 $transition: 0.3s;
 
-.container {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  margin: 30px auto;
-
+.GuestDashboard-container {
   .dashboards,
   .dashboard {
     display: grid;
