--- a/web/src/features/hostdashboard/HostRevenueCards/NightsAvailable.css
+++ b/web/src/features/hostdashboard/HostRevenueCards/NightsAvailable.css
@@ -56,7 +56,7 @@
     gap: 20px;
 }
 
-.nights-available-details p2 {
+.nights-available-details p {
     margin: 20px 10px;
     font-size: 120px;
     font-weight: normal;
