--- a/web/src/features/hostdashboard/HostHomepage.css
+++ b/web/src/features/hostdashboard/HostHomepage.css
@@ -676,3 +676,11 @@
 #logoutButton:hover {
   background-color: #3da942;
 }
+
+.loading-spinner-calender{
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
+  height: "42vh";
+  width: "72.5%";
+}
