--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -1,18 +1,8 @@
 .listing-details {
-  // display: inline;
-
   .listing-details-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-  }
-
-  @media (min-width: 768px) {
-    .container {
-      flex-direction: row;
-    }
+    font-size: 24px;
+    font-weight: bold;
+    margin: 20px 30px;
   }
 
   .container {
@@ -24,9 +14,6 @@
     padding: 0;
 
     .property-container {
-      position: relative;
-      flex: 2;
-
       .image-section {
         position: relative;
         flex: 2;
